Fixed a spacing issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,6 +25,6 @@ html, body, #map-canvas  {
 }
 
 #map-canvas {
-  width:500px;
+  width:550px;
   height:480px;
 }
